adjusted image size again on large screens to prevent overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -102,7 +102,7 @@ a {
 .menu-pic {
     margin-right: 10px;
     margin-bottom: 10px;
-    width: 291px;
+    width: 250px;
 }
 
 #contact-title:hover {
